# recumpose

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  main.cpp  math_question.txt  package.yaml  recumpose.cabal
app/: Main.hs
cpp/: main.cpp  parse.hpp  plot.hpp  print.hpp  samples.hpp  semantic.hpp  syntactic.hpp  syntax_tree.hpp  utils.hpp
samples/: falcon.rcl  program_1.rcl  simple.rcl  square_equation.rcl  tree_element.rcl
test/: CMakeLists.txt  test.cpp
